Fixed spacing again

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -101,8 +101,8 @@ span {
 .funFacts{
     padding-top: 1%;
     background-color: #FAF9F6;
-    margin-top:12%;
-    height: 40vh;
+    margin-top:16%;
+    height: 50vh;
     width: 100vw;
     border: 8px;
 }
